[package]
name = "bpt"
version = "0.2.1"
edition = "2021"

[dependencies]
# UI
ratatui = "0.26"
crossterm = "0.27"

# Async / Runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Logic
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0"
# Added for markdown parsing
pulldown-cmark = "0.9"

# Networking
reqwest = { version = "0.11", features = ["json", "stream"] }
eventsource-stream = "0.2"